Fix Render deployment: Remove postinstall script that runs prisma seed during build
- Removed prisma seed from postinstall to prevent permission issues on Render
- Seed will be run manually after deployment if needed

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "node server.js",
     "build": "echo 'No build step required'",
     "prisma.seed": "node prisma/seed.js",
-    "postinstall": "prisma generate && npm run prisma.seed"
+    "postinstall": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
