Remove postinstall script entirely to fix Render deployment
- Removed postinstall script that was causing 'prisma: Permission denied' error
- Prisma generate will be handled by the build command instead

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "start": "node server.js",
     "dev": "node server.js",
     "build": "echo 'No build step required'",
-    "prisma.seed": "node prisma/seed.js",
-    "postinstall": "npx prisma generate"
+    "prisma.seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
