Fix Prisma permission issue by making prisma executable in postinstall
- Added chmod +x to make prisma binary executable
- This should resolve the 'prisma: Permission denied' error on Render

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "node server.js",
     "build": "echo 'No build step required'",
-    "prisma.seed": "node prisma/seed.js"
+    "prisma.seed": "node prisma/seed.js",
+    "postinstall": "chmod +x node_modules/.bin/prisma && npx prisma generate"
   },
   "keywords": [],
   "author": "",
