--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "node server.js",
     "build": "echo 'No build step required'",
     "prisma.seed": "node prisma/seed.js",
-    "postinstall": "npx prisma generate"
+    "postinstall": "chmod +x ./node_modules/.bin/prisma && npx prisma generate"
   },
   "keywords": [],
   "author": "",
