--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,22 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Travel Dash backend (Render-compatible Prisma setup)",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx prisma migrate deploy && node server.js",
     "dev": "node server.js",
+    "start": "npx prisma generate && npx prisma migrate deploy && node server.js",
     "build": "echo 'No build step required'",
     "prisma.seed": "node prisma/seed.js",
-    "postinstall": "npx prisma generate"
+    "postinstall": "echo 'Skipping Prisma generate during Render build'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "engines": {
-    "node": "20"
+    "node": "20.x"
   },
   "dependencies": {
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "6.0.1",
+    "prisma": "6.0.1",
     "@supabase/supabase-js": "^2.76.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -32,10 +30,12 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
-    "prisma": "^6.14.0",
     "winston": "^3.18.3"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
-  }
+  },
+  "license": "ISC",
+  "keywords": [],
+  "author": ""
 }
