--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,11 @@
   },
   "dependencies": {
     "@prisma/client": "6.0.1",
-    "prisma": "6.0.1",
     "@supabase/supabase-js": "^2.76.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "debug": "^4.4.3",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "express-rate-limit": "^8.1.0",
@@ -30,6 +30,7 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
+    "prisma": "6.0.1",
     "winston": "^3.18.3"
   },
   "prisma": {
