--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,12 @@
   "scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
   "dev": "node server.js",
+  "prestart": "npm install express@4.21.2 --no-audit --no-fund --force && echo '✅ Express installed fresh before start'",
   "start": "npx prisma generate && npx prisma migrate deploy && node server.js",
   "build": "echo 'No build step required'",
   "prisma.seed": "node prisma/seed.js",
-  "postinstall": "npm rebuild express --force && echo '✅ Express rebuilt successfully'"
- },
+  "postinstall": "echo 'Skipping Prisma generate during Render build'"
+},
   "engines": {
     "node": "20.x"
   },
