debug: list express files inside Render

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Travel Dash backend (Render-compatible Prisma setup)",
   "main": "server.js",
-  "scripts": {
+ "scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
   "dev": "node server.js",
-  "prestart": "npm install express@4.21.2 --no-audit --no-fund --force && echo '✅ Express installed fresh before start'",
-  "start": "npx prisma generate && npx prisma migrate deploy && node server.js",
+  "prestart": "node ./scripts/check-express.js",
+  "start": "npm install express@4.21.2 --no-audit --no-fund --force && npx prisma generate && npx prisma migrate deploy && node server.js",
   "build": "echo 'No build step required'",
   "prisma.seed": "node prisma/seed.js",
   "postinstall": "echo 'Skipping Prisma generate during Render build'"
