--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,10 @@
  "scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
   "dev": "node server.js",
-  "prestart": "node ./scripts/check-express.js",
-  "start": "npm install express@4.21.2 --no-audit --no-fund --force && npx prisma generate && npx prisma migrate deploy && node server.js",
+  "start": "npm rebuild express --force && npx prisma generate && npx prisma migrate deploy && node server.js",
   "build": "echo 'No build step required'",
   "prisma.seed": "node prisma/seed.js",
-  "postinstall": "echo 'Skipping Prisma generate during Render build'"
+  "postinstall": "npm rebuild express --force && echo '✅ Express rebuilt after install'"
 },
   "engines": {
     "node": "20.x"
