--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Travel Dash backend (Render-compatible Prisma setup)",
   "main": "server.js",
- "scripts": {
+"scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
   "dev": "node server.js",
   "build": "echo 'No build step required'",
-  "start": "npm rebuild express --force && npx prisma generate && node server.js",
+  "start": "chmod +x ./node_modules/.bin/prisma && npx prisma generate || echo '⚠️ Prisma skipped' && node server.js",
   "postinstall": "npm rebuild express --force && echo '✅ Express rebuilt after install'"
 },
   "engines": {
