--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
   "description": "Travel Dash backend (Render-compatible Prisma setup)",
   "main": "server.js",
 "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
   "dev": "node server.js",
+  "start": "npx prisma generate && node server.js",
   "build": "echo 'No build step required'",
-  "start": "chmod +x ./node_modules/.bin/prisma && npx prisma generate || echo '⚠️ Prisma skipped' && node server.js",
-  "postinstall": "npm rebuild express --force && echo '✅ Express rebuilt after install'"
+  "postinstall": "npx prisma generate && npx prisma migrate deploy && npx prisma db seed && echo '✅ Prisma setup complete!'",
+  "seed": "npx prisma generate && npx prisma migrate deploy && npx prisma db seed"
 },
   "engines": {
     "node": "20.x"
