Fix: update Prisma setup and Railway DB connection

--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ JWT_SECRET="admin-secret-key"
 JWT_REFRESH_SECRET=your_jwt_refresh_secret_key_here
 
 # Database Configuration 
-DATABASE_URL="postgresql://postgres:VCJqRMxzudonquJSQtttzrQmbCVrFWlY@mainline.proxy.rlwy.net:53400/railway"
+DATABASE_URL="postgresql://postgres:VCJqRMxzudonquJSQtttzrQmbCVrFWlY@postgres.railway.internal:5432/railway"
 
 
 # Server Configuration
