--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Travel Dash backend (Render-compatible Prisma setup)",
+  "description": "Travel Dash backend (Railway-compatible Prisma setup)",
   "main": "server.js",
-"scripts": {
-  "dev": "node server.js",
-  "start": "npx prisma generate && node server.js",
-  "build": "echo 'No build step required'",
-  "postinstall": "npx prisma generate && npx prisma migrate deploy && npx prisma db seed && echo '✅ Prisma setup complete!'",
-  "seed": "npx prisma generate && npx prisma migrate deploy && npx prisma db seed"
-},
+  "scripts": {
+    "dev": "node server.js",
+    "start": "npx prisma generate && node server.js",
+    "build": "echo 'No build step required'",
+    "postinstall": "npx prisma generate && echo '✅ Prisma client generated!'",
+    "migrate": "npx prisma migrate deploy && npx prisma db seed && echo '✅ Prisma migration complete!'",
+    "seed": "npx prisma generate && npx prisma migrate deploy && npx prisma db seed"
+  },
   "engines": {
     "node": "20.x"
   },
